--- a/CRUD/src/main/webapp/WEB-INF/web.xml
+++ b/CRUD/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://JAVA.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>CRUD</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -10,13 +10,13 @@
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
   
-  <servlet>
-    <servlet-name>Frontpage</servlet-name>
-    <servlet-class>com.CRUD.frontservelet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Frontpage</servlet-name>
-    <url-pattern>/frontservelet</url-pattern>
-  </servlet-mapping>
+ <servlet>
+        <servlet-name>Registration</servlet-name>
+        <servlet-class>com.register.servlet.FormValidation </servlet-class>
+ </servlet>
+<servlet-mapping>
+  <servlet-name>Registration</servlet-name>
+  <url-pattern>/FormValidation</url-pattern>
+</servlet-mapping>
   
 </web-app>
